deploy/mysql.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  labels:
    k8s-app: mysql
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        args:
          - --lower_case_table_names=1
          - --skip-ssl
        ports:
        - containerPort: 3306 
          name: mysql
        volumeMounts: 
          - name: mysql-storage  
            mountPath: /var/lib/mysql  
      volumes: 
        - name: mysql-storage 
          nfs:
            server: 192.168.31.240
            path: /data/mysql/data
---

apiVersion: v1 
kind: Service 
metadata: 
  name: mysql 
  labels: 
    k8s-app: mysql
spec: 
  type: NodePort
  ports: 
    - port: 3306 
      targetPort: 3306
      nodePort: 3306 
  selector: 
    k8s-app: mysql
