deploy/docker-registry.yaml

# docker 镜像仓库和管理界面

# ------------------- docker-registry Deployment ------------------- #
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  labels:
    k8s-app: hicoin-registry
  name: hicoin-registry
  namespace: kube-system

spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: hicoin-registry
  template:
    metadata:
      labels:
        k8s-app: hicoin-registry
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      nodeSelector:  
        node-role.kubernetes.io/master: ""
      containers:
      - name: hicoin-registry
        image: registry
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: docker-registry-storage 
          mountPath: /var/lib/registry
      volumes:
      - name: docker-registry-storage
        awsElasticBlockStore:
          # Enter the volume ID below
          volumeID: vol-09bbbdfe8ba47c604
          fsType: ext4
---
# ------------------- docker-registry Service ------------------- #
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: hicoin-registry
  name: hicoin-registry
  namespace: kube-system
spec:  
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
  selector:
    k8s-app: hicoin-registry
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hicoin-registry-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - k8s-registry.hicoin.io
    secretName: hicoin-registry-secret
  rules:
  - host: k8s-registry.hicoin.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hicoin-registry
          servicePort: registry

---
# ------------------- docker-registry Deployment ------------------- #
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  labels:
    k8s-app: hicoin-registry-web
  name: hicoin-registry-web
  namespace: kube-system
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: hicoin-registry-web
  template:
    metadata:
      labels:
        k8s-app: hicoin-registry-web
    spec:
      containers:
      - name: hicoin-registry-web
        image: konradkleine/docker-registry-frontend:v2
        ports:
        - containerPort: 80
          protocol: TCP
---
# ------------------- docker-registry Service ------------------- #
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: hicoin-registry-web
  name: hicoin-registry-web
  namespace: kube-system
spec:  
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: hicoin-registry-web


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hicoin-registry-web-ingress
  namespace: kube-system
spec:
  rules:
  - host: k8s-hub.hicoin.io	
    http:
      paths:
      - path: /
        backend:
          serviceName: hicoin-registry-web
          servicePort: 80
